Form inputs have a height of 40px. This prevents the shift time inputs from being very short when they are empty, and then enlarging to a normal size after being filled out.

--- a/src/App.css
+++ b/src/App.css
@@ -593,6 +593,7 @@ button:focus {
   border: 1px solid darkgray;
   box-shadow: 3px 3px 1px lightgrey;
   background-color: white;
+  height: 40px;
 }
 
 .form-section__input:hover {
